# runMongoDB

./: CMakeLists.txt  README.md  test.cpp
config/: generate_mongod_conf.sh  mongod1.conf  mongod10.conf  mongod11.conf  mongod12.conf  mongod13.conf  mongod14.conf  mongod15.conf  mongod16.conf  mongod17.conf  mongod18.conf  mongod19.conf  mongod2.conf  mongod20.conf  mongod21.conf  mongod22.conf  mongod23.conf  mongod24.conf  mongod25.conf  mongod26.conf  mongod27.conf  mongod28.conf  mongod29.conf  mongod3.conf  mongod30.conf  mongod4.conf  mongod5.conf  mongod6.conf  mongod7.conf  mongod8.conf  mongod9.conf
data/2024-05-17-06-01-41./: 2024-05-17-06-01-41._result.csv
data/2024-05-17-19-39-18./: 2024-05-17-19-39-18._result.csv
data/2024-05-20-00-28-00.true/: 2024-05-20-00-28-00.true_result.csv
data/2024-05-20-07-29-36/: 2024-05-20-07-29-36_result.csv
data/2024-05-20-19-40-54/: 2024-05-20-19-40-54_result.csv
data/2024-05-20-23-50-34/: 2024-05-20-23-50-34_result.csv
data/2024-05-21-00-20-05/: 2024-05-21-00-20-05_result.csv
data/2024-05-21-02-21-29/: 2024-05-21-02-21-29_result.csv
data/2024-05-21-02-43-22/: 2024-05-21-02-43-22_result.csv
data/2024-05-21-05-31-14/: 2024-05-21-05-31-14_result.csv
data/2024-05-21-08-58-02/: 2024-05-21-08-58-02_result.csv
data/2024-05-21-09-47-59/: 2024-05-21-09-47-59_result.csv
data/2024-05-21-19-05-13/: 2024-05-21-19-05-13_result.csv
include/: mongdbBench.h
scripts/: clear_ramdisk.sh  fetch_data_from_log.sh  run.sh  run1.sh  sudo  test.sh  tmp.sh
src/: run_client.cpp
(+11 files in other folders)
